--- a/src/Components/CardList/CardObj/CardObj.css
+++ b/src/Components/CardList/CardObj/CardObj.css
@@ -1,3 +1,18 @@
 .cardObjWrapper {
     color: white;
+    border: solid 1px rgb(83, 80, 80);
+    border-radius: 3px;
+    padding: 15px;
+    margin: 10px 20px 10px 20px;
+    background-color: rgb(83, 80, 80);
+    transition: transform 0.3s;
 }
+
+.cardObjWrapper:hover {
+    z-index: 5;
+    transform: scale(1.01);
+  }
+
+  th, td {
+      padding: 10px 25px 10px 25px;
+  }
