added all cards to card list via api call from app.js with minor formatting

--- a/src/App.css
+++ b/src/App.css
@@ -20,10 +20,15 @@
 }
 
 .appContainer {
-  height: 100vh;
-  background-color: rgb(37, 37, 37);
+  min-height: 100vh;
+  height: 100%;
+  background-color: #121416;
 }
 
 .contentContainer {
   padding: 0px 10px 10px 10px;
+}
+
+.loading {
+  color: white;
 }
